--- a/index.html
+++ b/index.html
@@ -9,19 +9,29 @@
 
   <style>
     :root {
-      /* paleta */
-      --light-gray:   #EAEAEA;
-      --ivory-cream:  #F8F5E9;
-      --soft-sand:    #E8DCC0;
-      --champagne:    #E4CDA7;
-      --warm-honey:   #D6B370;
+  /* paleta (din imagine) */
+  --light-gray:      #EAEAEA;
+  --ivory:           #F8F5E9;
+  --soft-sand:       #E8DCC0;
+  --champagne-beige: #E4CDA7;
+  --warm-honey:      #D6B370;
 
-      --paper-main: var(--ivory-cream);
-      --paper-alt:  var(--light-gray);
-      --ink:#222;
-      --muted:#666;
-      --accent:#c2ab85;
-    }
+  --warm-greige:     #B8B5AF;
+  --sage-green:      #A8B2A1;
+  --warm-taupe:      #9C8F84;
+  --blush-nude:      #E6CFC2;
+  --caramel-soft:    #C89A6A;
+
+  /* folosite în pagină */
+  --paper-main: var(--ivory);
+  --paper-alt:  var(--light-gray);
+  --ink: #222;
+  --muted: #666;
+
+  /* accent recomandat din paletă */
+  --accent: var(--champagne-beige);
+  --accent-strong: var(--warm-honey);
+}
 
     * { box-sizing: border-box; margin:0; padding:0 }
 
@@ -721,6 +731,37 @@
             <span class="swatch-hex">#D6B370</span>
           </div>
         </div>
+        <div class="swatch">
+  <div class="swatch-dot" style="background:#B8B5AF;"></div>
+  <div class="swatch-label">
+    <span class="swatch-name">Warm Greige</span>
+    <span class="swatch-hex">#B8B5AF</span>
+  </div>
+</div>
+
+<div class="swatch">
+  <div class="swatch-dot" style="background:#9C8F84;"></div>
+  <div class="swatch-label">
+    <span class="swatch-name">Warm Taupe</span>
+    <span class="swatch-hex">#9C8F84</span>
+  </div>
+</div>
+
+<div class="swatch">
+  <div class="swatch-dot" style="background:#E6CFC2;"></div>
+  <div class="swatch-label">
+    <span class="swatch-name">Blush Nude</span>
+    <span class="swatch-hex">#E6CFC2</span>
+  </div>
+</div>
+
+<div class="swatch">
+  <div class="swatch-dot" style="background:#C89A6A;"></div>
+  <div class="swatch-label">
+    <span class="swatch-name">Caramel Soft</span>
+    <span class="swatch-hex">#C89A6A</span>
+  </div>
+</div>
       </div>
     </div>
   </div>
@@ -831,5 +872,6 @@
 
 </body>
 </html>
+
 
 
