--- a/index.html
+++ b/index.html
@@ -388,10 +388,11 @@
     }
 
     .swatches {
-      display:flex;
-      flex-wrap:wrap;
-      gap:14px;
-    }
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  column-gap: 60px;   /* distanța între cele două coloane */
+  row-gap: 18px;      /* distanța verticală între rânduri */
+}
 
     .swatch {
       display:flex;
@@ -586,6 +587,10 @@
         width: 75px;
         top: -40px;
       }
+      .swatches {
+    grid-template-columns: 1fr;
+    column-gap: 0;
+  }
     }
 
     /* Forțează numele pe o linie pe telefon */
@@ -872,6 +877,7 @@
 
 </body>
 </html>
+
 
 
 
