--- a/index.html
+++ b/index.html
@@ -724,7 +724,7 @@
         <div class="swatch">
           <div class="swatch-dot" style="background:#E4CDA7;"></div>
           <div class="swatch-label">
-            <span class="swatch-name">Champagne Beige</span>
+            <span class="swatch-name">Champagne</span>
             <span class="swatch-hex">#E4CDA7</span>
           </div>
         </div>
@@ -877,6 +877,7 @@
 
 </body>
 </html>
+
 
 
 
